--- a/_config.yml
+++ b/_config.yml
@@ -156,7 +156,7 @@ yat:
 # Page default value
 defaults:
   home:
-    heading: "where to again?'s Blog"
+    heading: "Where to again?'s Blog"
     subheading: "by kiyoung"
     banner: "Your image url"
 
